--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -13,3 +13,42 @@
   transform: translate(-50%, -50%);
   border-radius: 3px;
 }
+
+// MEDIA QUERY MANAGER
+/*
+  0-600px: Phone;
+  600-900px: Tablet portrate mode;
+  600-1200px: Tablet landscape; 
+  [1200-1800px] - normal style apply;
+  1800+: Big screen ;
+*/
+
+// @mixin respond-phone {
+//   @media (max-width: 600px) { @content };
+// }
+
+/*
+$breakpoint argument choices:
+-phone;
+-tab-port;
+-tab-land;
+-big-desctop;
+1em=16px
+*/
+@mixin respond($breakpoint) {
+  @if $breakpoint == phone {
+    @media (max-width: 37.5em) { @content }; // 600px
+  }
+
+  @if $breakpoint == tab-port {
+    @media (max-width: 56.25em) { @content };  // 900px
+  }
+
+  @if $breakpoint == tab-land {
+    @media (max-width: 75em) { @content }; // 1200px
+  }
+  
+  @if $breakpoint == big-desktop {
+    @media (min-width: 112.5em) { @content }; // 1800px
+  }
+}
