--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,8 +9,31 @@
 html {
   //This defines what one rem is
   font-size: 62.5%;
+
+    // @include respond-phone {
+  //   font-size: 50%;
+  // }
+
+  @include respond(tab-land) { //<1200
+    font-size: 56.25%; //1rem = 9px 9/16 =56.25%;
+  }
+
+  @include respond(tab-port) {//900
+    font-size: 50%; //1rem = 8px 8/16 =50%;
+  }
+
+  @include respond(big-desktop) { 
+    font-size: 75%; // 1rem = 12px 12/16=75%
+  }
+
 }
 
 body {
   box-sizing: border-box;
+  padding: 3rem;
+
+  @include respond(tab-port) {//900
+   padding: 0;
+  }
+
 }
