--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -32,12 +32,25 @@
   opacity: 0;
   transform: translate(-50%, -50%) scale(.5);
   transition: all .4s .2s;
+
+    @include respond(phone) {
+      padding: 3rem;
+    }
   }
 
   &__left {
     width: 33.3333%;
     display: table-cell;
     vertical-align: middle;
+
+    @include respond(phone) {
+      width: 100%;
+      display: flex;
+      align-items: end;
+      justify-content: space-evenly;
+      height: 12rem;
+      margin-bottom: 1rem;
+    }
   }
 
   &__right {
@@ -45,11 +58,23 @@
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem;
+
+    @include respond(phone) {
+      width: 100%;
+      display: block;
+      padding: 0;
+    }
   }
 
   &__img {
     display: block;
     width: 100%;
+    
+    @include respond(phone) {
+      float: none;
+      width: 45%;
+      height: 100%;
+    }
   }
 
   &__text {
@@ -67,6 +92,10 @@
     -webkit-hyphens: auto;
     -moz-hyphens: auto;
     hyphens: auto;
+
+    @include respond(phone) {
+      font-size: 1.6rem;
+    }
   }
 
   &__close {
